--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,8 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
+
+###> doctrine/doctrine-bundle ###
+# SQLite pour les tests et fixtures (plus rapide et plus simple)
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_test.db"
+###< doctrine/doctrine-bundle ###
