mise a jour pour le deployment

--- a/.env.test
+++ b/.env.test
@@ -3,6 +3,6 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 
 ###> doctrine/doctrine-bundle ###
-# SQLite pour les tests et fixtures (plus rapide et plus simple)
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_test.db"
+# MySQL (même serveur que dev). Doctrine ajoute le suffixe _test au nom de la base (voir doctrine.yaml).
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
