--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+# En production : définir APP_SECRET (bin/console secrets:set APP_SECRET ou env) et APP_DEBUG=0
 APP_SECRET=
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
@@ -27,16 +28,10 @@ DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# Ancienne config MySQL (dev) :
-# DATABASE_URL="mysql://root:root@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
-#
-# Nouvelle config : SQLite partagé pour dev/test (base déjà remplie avec le CSV du 01-07-2026)
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_test.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# MySQL/MariaDB uniquement (requis pour le déploiement). Pas de SQLite.
+# En prod : définir DATABASE_URL dans .env.local ou variables d'environnement.
+# serverVersion : 8.0.32 (MySQL 8), 10.11.2-MariaDB (MariaDB), etc.
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -49,3 +44,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> app: inbound webhooks (PrintAudit) ###
+# Token pour authentifier les webhooks POST /api/inbound/printaudit/webhook (header X-Webhook-Token ou Bearer)
+# Vide = webhook refusé (401). À définir en prod pour accepter les alertes.
+# PRINTAUDIT_WEBHOOK_TOKEN=
+###< app: inbound webhooks ###
