--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ DEFAULT_URI=http://localhost
 # MySQL/MariaDB uniquement (requis pour le déploiement).
 # En prod : définir DATABASE_URL dans .env.local ou variables d'environnement.
 # serverVersion : 8.0.32 (MySQL 8), 10.11.2-MariaDB (MariaDB), etc.
-DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
