--- a/.env.test
+++ b/.env.test
@@ -4,5 +4,5 @@ APP_SECRET='$ecretf0rt3st'
 
 ###> doctrine/doctrine-bundle ###
 # MySQL (même serveur que dev). Doctrine ajoute le suffixe _test au nom de la base (voir doctrine.yaml).
-DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/techoffice?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
